--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
   },
   "homepage": "https://github.com/curiopost/backend#readme",
   "dependencies": {
-    "dotenv": "^16.0.1"
+    "aerect.js": "^2.0.1",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "http-errors": "^2.0.0",
+    "mongoose": "^6.4.4",
+    "morgan": "^1.10.0"
   }
 }
