--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   "homepage": "https://github.com/curiopost/backend#readme",
   "dependencies": {
     "aerect.js": "^2.0.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-rate-limit": "^6.5.1",
     "http-errors": "^2.0.0",
     "mongoose": "^6.4.4",
     "morgan": "^1.10.0"
