--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mongoose": "^6.4.4",
     "morgan": "^1.10.0",
     "nodemailer": "^6.7.7",
-    "number-abbreviate": "^2.0.0"
+    "number-abbreviate": "^2.0.0",
+    "validator": "^13.7.0"
   }
 }
