--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "node-fetch": "^2.6.7",
     "nodemailer": "^6.7.7",
     "number-abbreviate": "^2.0.0",
+    "random-number-csprng": "^1.0.2",
+    "safe-compare": "^1.1.4",
     "validator": "^13.7.0"
   }
 }
